--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,22 @@ asgiref==3.4.1
 certifi==2021.10.8
 charset-normalizer==2.0.7
 distlib==0.3.4
-dj-database-url==0.5.0
+dj-database-url==0.4.2
 Django==3.2.9
 django-crispy-forms==1.13.0
 django-environ==0.8.1
+django-on-heroku==1.1.2
 environ==1.0
 filelock==3.4.2
 gunicorn==20.1.0
 idna==3.3
 pkg_resources==0.0.0
 platformdirs==2.4.1
+psycopg2-binary==2.9.3
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.7
 virtualenv==20.13.0
-psycopg2==2.8.6
+whitenoise==5.3.0
