--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ environ==1.0
 filelock==3.4.2
 gunicorn==20.1.0
 idna==3.3
+pkg_resources==0.0.0
 platformdirs==2.4.1
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
