--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,16 @@ django-environ==0.8.1
 django-on-heroku==1.1.2
 environ==1.0
 filelock==3.4.2
+flake8==4.0.1
 gunicorn==20.1.0
 idna==3.3
+mccabe==0.6.1
 pkg_resources==0.0.0
 platformdirs==2.4.1
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
